apps/local/home/mealie/deployment.yaml
# yaml-language-server: kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v1.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: mealie-http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: mealie-http
              scheme: HTTP
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
